frontend/src/_styles/theme.scss
/* ... */
.theme-dark {
  .editor .navbar-brand {
    border-right: 1px solid #333c48;
  }

  .realtime-avatars {
    border-right: 1px solid #333c48;
  }
}

.modal-backdrop {
  // background-color: hsla(0, 0%, 0%, 0.439);
  opacity: 0.5;
}

.ds-delete-btn {
  display: none;
  border: none;
  background: none;
}

.ds-list-item:hover .ds-delete-btn {
  display: block;
}

.toojet-db-table-footer,
.home-page-footer {
  position: fixed;
  bottom: 0px;
  right: 0;
  left: 336px; //48+288
}

.pagination-container {
  display: flex;
  padding: 0px;
  height: 20px;

  .form-control {
    padding: 0 4px;
    width: fit-content;
    max-width: 30px;
    text-align: center;
  }
}

.profile-card.dark.card {
  background-color: #1F2936;
  color: #C0C8CC;
}

.theme-dark {
  .editor-header-actions {
    .current-layout {
      .bg-white {
        background-color: #232E3C !important;
      }

      svg {
        path {
          fill: white;
        }
      }
    }
  }

  .icon-tabler-x {
    stroke: white;
  }
}

.img-invert {
  img {
    filter: invert(1);
  }
}

.user-group-table {
  .selected-row {
    background-color: #ECEEF0;
  }

  .selected-row.dark {
    background-color: #232E3C;
  }
}

.notification-center.theme-dark {

  .empty-subtitle,
  .card-footer>span,
  .empty-title {
    color: white !important;
  }
}


// DASHBOARD SCROLL STYLES--->
.create-new-app-wrapper {
  height: 64px;
}

.home-page-sidebar {
  height: calc(100vh - 48px) !important;
}

.folder-list {
  height: calc(100vh - 112px) !important; // 48px [navbar] +  64px [ all apps ]
}

.home-page-content {
  height: calc(100vh - 48px) !important;
  overflow-y: scroll;
}

.application-folders-list {
  height: 64px;
}

// DASHBOARD STYLES END

// TABLE
.table-left-sidebar {
  height: calc(100vh - 173px) !important; // 48px [navbar] +  124px [ add table and search ] + extra 1 px
  overflow-y: auto;
}

.database-table-header-wrapper {
  height: 96px !important;
}

.toojet-db-table-footer {
  height: 52px;
}

.homepage-app-card {
  height: 188px;
}

.app-creation-time-container {
  height: 16px;
}

.release-buttons {
  height: 45px;
  margin-bottom: 10px;
}

.global-settings-app-wrapper {
  max-width: 300px;
}

.version-manager-container {
  padding: 0.6rem;
}

// tooljet db fields styles [ query manager ]
.tj-db-field-wrapper {
  .code-hinter-wrapper {
    ::-webkit-scrollbar {
      display: none;
    }
  }

  .CodeMirror-sizer {
    min-height: 32px !important;
    width: 100%;
    border-right-width: 0px !important;
    padding: 0 !important;
    overflow-y: auto;

    .CodeMirror-lines {
      margin-top: 0px !important;
      min-height: 32px !important;
      padding: 0 !important;
    }
  }
}

.table-list-items#popover-contained:has(.theme-dark) {
  border-color: inherit;
  overflow: hidden;
}

.table-list-item-popover.dark {
  svg {
    path {
      fill: white;
    }
  }
}

.theme-dark {
  .react-loading-skeleton {
    background-color: #2F3C4C !important;
    background-image: linear-gradient(90deg, #2F3C4C, #2F3C4C, #2F3C4C) !important;
  }
}

.react-tooltip {
  font-size: .765625rem !important;
}
.tj-db-table {
  overflow-y: auto;
  height: 110px;

  thead th {
    position: sticky;
    top: 0;
  }

  table {
    border-collapse: collapse;
    width: 100%;
  }
}

.bounded-box {
  .sc-iwsKbI.lmGPCf {
    height: 100%;
    margin: auto;
    width: max-content;
    max-width: 100% !important;

    img {
      height: 100% !important;
    }

    .gVmiLs {
      width: auto !important;
    }
  }

  .css-tlfecz-indicatorContainer,
  .css-1gtu0rj-indicatorContainer {
    svg {
      width: 12px !important;
      height: 12px !important;
    }
  }

}

.selected-ds.row>img {
  padding: 0 !important;
}

.tj-onboarding-phone-input {
  width: 392px !important;
  height: 40px;
  padding: 8px 12px;
  gap: 8px;
  margin-bottom: 12px;
  background: #FFFFFF;
  border: 1px solid #D7DBDF !important;
  border-radius: 0px 4px 4px 0px !important;

  &:hover {
    border: 1px solid #466BF2 !important;
  }
}

.tj-onboarding-phone-input-wrapper {
  margin-bottom: 12px;
}

