fix :: dark mode style

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -7523,3 +7523,37 @@ tbody {
 .tj-onboarding-phone-input-wrapper {
   margin-bottom: 12px;
 }
+.theme-dark {
+	.tj-onboarding-phone-input-wrapper {
+		.flag-dropdown {
+			background-color: #1f2936 !important;
+
+			.country-list {
+				background-color: #1f2936 !important;
+				background: #1f2936;
+
+				li {
+					.country .highlight{
+						background-color: #3a3f42;
+						color: #000 !important;
+            div{
+              .country-name {
+                color: #6b6b6b !important;
+              }
+            }
+			
+					}
+
+					&:hover {
+						background-color: #2b2f31;
+					}
+
+				}
+			}
+		}
+
+	}
+  .react-tel-input .country-list .country.highlight {
+    color: #6b6b6b;
+}
+}
